@@ -78,9 +78,10 @@ our bandwidth.
 
 
 <p>
-  If your platform is not listed then help by
-  <a href="../devel/packaging.html">packaging LilyPond</a>.
-</p>
+The readily built installers were created with GUB. Refer to <a
+href="http://lilypond.org/~hanwen/gub/READ-ME">the GUB README</a> for
+more information on GUB.
+<p>
 
 All logos and product images are copyright and trademark acknowledged.
 
